# StudyOS

CourseDesign/: .gitignore  CMakeLists.txt
CourseDesign/include/: disk.h  ext2.h  file.h  user.h  util.h
CourseDesign/src/: main.c
CourseDesign/src/model/: disk.c  ext2.c  file.c  user.c  util.c
